fixed alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -120,11 +120,10 @@ button:hover {
 }
 
 .cart-items-section {
-
   width: 100%;
   border: 1px solid rgb(216, 215, 215);
   padding: 1rem;
-
+  margin-top: 1.5rem;
 
 }
 
